# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml  static_spec.yaml
.github/workflows/: CI.yaml
.sqlx/: query-cd8397a1ab09a40b35992659d9923d55090b06b7adcc054cc6d038cb67440fc3.json  query-de34b8f98c0e8935039abedfc1766c13a17f0189d85c31b0f6b0e8a679713f55.json
configuration/: base.yaml  production.yaml
migrations/: 20240325224938_create_subscriptions_table.sql  20240511145353_make_status_not_null_in_subscriptions.sql  20240512101941_create_subscription_tokens_table.sql.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  homepage.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
static/: health_check.html  homepage.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
