[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Abhishek Roy <royabhishek77@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.5.1"
config = "0.14.0"
reqwest = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"], default-features = false }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
